# helloworld-python

./: .gitignore  LICENSE  README.md  setup.cfg
src/helloworld-iamjameswalters/: hellojw.py
src/helloworld_iamjameswalters.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
