[metadata]
name = helloworld-iamjameswalters
version = 0.1.0
author = James Walters
description = Just learning how to package Python for PyPI and the Snap Store.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamjameswalters/helloworld-python
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
